@@ -19,7 +19,6 @@ package org.apache.solr.cloud;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.apache.solr.common.params.CommonParams.NAME;
 import static org.apache.solr.core.ConfigSetProperties.DEFAULT_FILENAME;
-import static org.hamcrest.CoreMatchers.containsString;
 
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.http.HttpServletRequest;
@@ -40,7 +39,6 @@ import java.security.Principal;
 import java.util.ArrayDeque;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Deque;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
@@ -56,14 +54,6 @@ import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 import javax.script.ScriptEngineManager;
 import org.apache.commons.io.file.PathUtils;
-import org.apache.http.HttpEntity;
-import org.apache.http.auth.BasicUserPrincipal;
-import org.apache.http.client.methods.HttpEntityEnclosingRequestBase;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.client.methods.HttpPut;
-import org.apache.http.entity.ByteArrayEntity;
-import org.apache.http.message.BasicHeader;
-import org.apache.http.util.EntityUtils;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.api.AnnotatedApi;
 import org.apache.solr.client.solrj.RemoteSolrException;
@@ -71,12 +61,12 @@ import org.apache.solr.client.solrj.SolrClient;
 import org.apache.solr.client.solrj.SolrRequest.METHOD;
 import org.apache.solr.client.solrj.SolrRequest.SolrRequestType;
 import org.apache.solr.client.solrj.SolrServerException;
-import org.apache.solr.client.solrj.apache.CloudLegacySolrClient;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.request.ConfigSetAdminRequest;
 import org.apache.solr.client.solrj.request.ConfigSetAdminRequest.Create;
 import org.apache.solr.client.solrj.request.ConfigSetAdminRequest.Delete;
 import org.apache.solr.client.solrj.request.ConfigSetAdminRequest.Upload;
+import org.apache.solr.client.solrj.request.ConfigsetsApi;
 import org.apache.solr.client.solrj.request.GenericSolrRequest;
 import org.apache.solr.client.solrj.request.schema.SchemaRequest;
 import org.apache.solr.client.solrj.response.CollectionAdminResponse;
@@ -85,7 +75,6 @@ import org.apache.solr.client.solrj.response.schema.SchemaResponse;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.cloud.SolrZkClient;
-import org.apache.solr.common.cloud.ZkMaintenanceUtils;
 import org.apache.solr.common.params.CollectionParams.CollectionAction;
 import org.apache.solr.common.params.ConfigSetParams;
 import org.apache.solr.common.params.ConfigSetParams.ConfigSetAction;
@@ -97,16 +86,21 @@ import org.apache.solr.common.util.ValidatingJsonMap;
 import org.apache.solr.core.ConfigSetProperties;
 import org.apache.solr.core.ConfigSetService;
 import org.apache.solr.core.TestSolrConfigHandler;
+import org.apache.solr.embedded.JettySolrRunner;
 import org.apache.solr.handler.admin.api.ModifyBasicAuthConfigAPI;
 import org.apache.solr.security.AuthorizationContext;
 import org.apache.solr.security.AuthorizationPlugin;
 import org.apache.solr.security.AuthorizationResponse;
 import org.apache.solr.security.BasicAuthPlugin;
-import org.apache.solr.servlet.SolrDispatchFilter;
+import org.apache.solr.security.SimplePrincipal;
 import org.apache.solr.util.ExternalPaths;
 import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
 import org.apache.zookeeper.data.Stat;
+import org.eclipse.jetty.client.ByteBufferRequestContent;
+import org.eclipse.jetty.client.ContentResponse;
+import org.eclipse.jetty.client.HttpClient;
+import org.eclipse.jetty.http.HttpMethod;
 import org.junit.After;
 import org.junit.Assume;
 import org.junit.BeforeClass;
@@ -165,6 +159,14 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       Create baseConfigNoExists = new Create();
       baseConfigNoExists.setConfigSetName("newConfigSet").setBaseConfigSetName("baseConfigSet");
       verifyException(solrClient, baseConfigNoExists, "Base ConfigSet does not exist");
+
+      // Invalid configset names
+      for (String invalidName :
+          new String[] {"configset!", "configset\"", "-configset", "configset name"}) {
+        Create invalidNameCreate = new Create();
+        invalidNameCreate.setConfigSetName(invalidName).setBaseConfigSetName("_default");
+        verifyException(solrClient, invalidNameCreate, "Invalid configset");
+      }
     }
   }
 
@@ -327,25 +329,19 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
 
   @Test
   public void testUploadErrors() throws Exception {
-    final SolrClient solrClient =
-        getHttpSolrClient(cluster.getJettySolrRunners().get(0).getBaseUrl().toString());
-
     ByteBuffer emptyData = ByteBuffer.allocate(0);
 
     ignoreException("The configuration name should be provided");
     // Checking error when no configuration name is specified in request
     Map<?, ?> map =
         postDataAndGetResponse(
-            cluster.getSolrClient(),
-            cluster.getJettySolrRunners().get(0).getBaseUrl().toString()
-                + "/admin/configs?action=UPLOAD",
+            cluster.getJettySolrRunners().getFirst(),
+            "/admin/configs?action=UPLOAD",
             emptyData,
             null,
             false);
-    assertNotNull(map);
     unIgnoreException("The configuration name should be provided");
-    long statusCode = (long) getObjectByPath(map, Arrays.asList("responseHeader", "status"));
-    assertEquals(400l, statusCode);
+    assertEquals(400, getStatusCode(map));
 
     SolrZkClient zkClient =
         new SolrZkClient.Builder()
@@ -369,16 +365,13 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     ignoreException("already exists");
     map =
         postDataAndGetResponse(
-            cluster.getSolrClient(),
-            cluster.getJettySolrRunners().get(0).getBaseUrl().toString()
-                + "/admin/configs?action=UPLOAD&name=myconf",
+            cluster.getJettySolrRunners().getFirst(),
+            "/admin/configs?action=UPLOAD&name=myconf",
             emptyData,
             null,
             false);
-    assertNotNull(map);
     unIgnoreException("already exists`");
-    statusCode = (long) getObjectByPath(map, Arrays.asList("responseHeader", "status"));
-    assertEquals(400l, statusCode);
+    assertEquals(400, getStatusCode(map));
     assertTrue(
         "Expected file doesnt exist in zk. It's possibly overwritten",
         zkClient.exists("/configs/myconf/firstDummyFile"));
@@ -386,8 +379,17 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
         "Expected file doesnt exist in zk. It's possibly overwritten",
         zkClient.exists("/configs/myconf/anotherDummyFile"));
 
+    // Checking error when configuration name contains invalid characters
+    for (String invalidName : new String[] {"configset!", "-configset"}) {
+      JettySolrRunner jetty = cluster.getJettySolrRunners().getFirst();
+      map =
+          postDataAndGetResponse(
+              jetty, "/admin/configs?action=UPLOAD&name=" + invalidName, emptyData, null, false);
+      int statusCode = getStatusCode(map);
+      assertEquals("Expected 400 for invalid configset name: " + invalidName, 400, statusCode);
+    }
+
     zkClient.close();
-    solrClient.close();
   }
 
   @Test
@@ -460,16 +462,13 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     ByteBuffer buff = UTF_8.encode(payload);
     Map<?, ?> map =
         postDataAndGetResponse(
-            cluster.getSolrClient(),
-            cluster.getJettySolrRunners().get(0).getBaseUrl().toString()
-                + "/newcollection/schema?wt=js"
-                + "on",
+            cluster.getJettySolrRunners().getFirst(),
+            "/newcollection/schema?wt=json",
+            "application/json",
             buff,
             null,
             false);
-    Map<?, ?> responseHeader = (Map<?, ?>) map.get("responseHeader");
-    Long status = (Long) responseHeader.get("status");
-    assertEquals((long) status, 0L);
+    assertEquals(0, getStatusCode(map));
   }
 
   @Test
@@ -584,7 +583,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       assertEquals(
           400, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2, true, false));
 
-      for (String fileEnding : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+      for (String fileEnding : ConfigSetService.DEFAULT_FORBIDDEN_FILE_TYPES) {
         String f = configPath + "/test." + fileEnding;
         assertFalse(
             "Expecting file " + f + " to not exist, because it has a forbidden file type",
@@ -593,15 +592,9 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     }
   }
 
-  @Test
-  public void testSingleFileOverwriteV1() throws Exception {
-    testSingleFileOverwrite(false);
-  }
+  // Single file uploads do not support overwrite parameter (always overwrites)
 
-  @Test
-  public void testSingleFileOverwriteV2() throws Exception {
-    testSingleFileOverwrite(true);
-  }
+  // V2 API not tested: single file uploads always overwrite (no overwrite parameter)
 
   public void testSingleFileOverwrite(boolean v2) throws Exception {
     String configsetName = "regular";
@@ -744,19 +737,12 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
             zkClient, configsetName, configsetSuffix, "test/upload/path/solrconfig.xml"));
   }
 
+  // Single file uploads do not support cleanup parameter
+  // V2 API not tested: single file uploads do not support cleanup parameter
   @Test
-  public void testSingleWithCleanupV1() throws Exception {
-    testSingleWithCleanup(false);
-  }
-
-  @Test
-  public void testSingleWithCleanupV2() throws Exception {
-    testSingleWithCleanup(true);
-  }
-
-  public void testSingleWithCleanup(boolean v2) throws Exception {
+  public void testSingleWithCleanup() throws Exception {
     String configsetName = "regular";
-    String configsetSuffix = "testSinglePathCleanup-1-" + v2;
+    String configsetSuffix = "testSinglePathCleanup-1";
     uploadConfigSetWithAssertions(configsetName, configsetSuffix, null);
     try (SolrZkClient zkClient =
         new SolrZkClient.Builder()
@@ -775,7 +761,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
               "/test/upload/path/solrconfig.xml",
               true,
               true,
-              v2));
+              false));
       assertFalse(
           "New file should not exist, since the trust check did not succeed.",
           zkClient.exists(
@@ -805,7 +791,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
             .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
             .withConnTimeOut(45000, TimeUnit.MILLISECONDS)
             .build()) {
-      for (String fileType : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+      for (String fileType : ConfigSetService.DEFAULT_FORBIDDEN_FILE_TYPES) {
         ignoreException("is forbidden for use in configSets");
         assertEquals(
             "Can't upload a configset file with a forbidden type: " + fileType,
@@ -832,19 +818,13 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     }
   }
 
-  @Test
-  public void testSingleFileUntrustedV1() throws Exception {
-    testSingleFileUntrusted(false);
-  }
+  // Single file uploads do not support cleanup parameter
 
-  @Test
-  public void testSingleFileUntrustedV2() throws Exception {
-    testSingleFileUntrusted(true);
-  }
+  // V2 API not tested: single file uploads do not support cleanup parameter
 
-  public void testSingleFileUntrusted(boolean v2) throws Exception {
+  public void testSingleFileUpload(boolean v2) throws Exception {
     String configsetName = "regular";
-    String configsetSuffix = "testSinglePathUntrusted-1-" + v2;
+    String configsetSuffix = "testSinglePathUpload-1-" + v2;
     uploadConfigSetWithAssertions(configsetName, configsetSuffix, null);
 
     try (SolrZkClient zkClient =
@@ -853,8 +833,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
             .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
             .withConnTimeOut(45000, TimeUnit.MILLISECONDS)
             .build()) {
-      // New file with trusted request
-
+      // Upload new file to first path
       assertEquals(
           0,
           uploadSingleConfigSetFile(
@@ -873,13 +852,13 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
               zkClient, configsetName, configsetSuffix, "test/upload/path/solrconfig.xml"));
       assertConfigsetFiles(configsetName, configsetSuffix, zkClient);
 
-      // New file with untrusted request
+      // Upload new file to different path
       assertEquals(
           0,
           uploadSingleConfigSetFile(
               configsetName,
               configsetSuffix,
-              null,
+              "solr",
               "solr/configsets/upload/regular/solrconfig.xml",
               "/test/different/path/solrconfig.xml",
               false,
@@ -892,7 +871,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
               zkClient, configsetName, configsetSuffix, "test/different/path/solrconfig.xml"));
       assertConfigsetFiles(configsetName, configsetSuffix, zkClient);
 
-      // Overwrite with trusted request
+      // Overwrite existing file
       int extraFileZkVersion =
           getConfigZNodeVersion(
               zkClient, configsetName, configsetSuffix, "test/different/path/solrconfig.xml");
@@ -914,29 +893,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
                   zkClient, configsetName, configsetSuffix, "test/different/path/solrconfig.xml"));
       assertConfigsetFiles(configsetName, configsetSuffix, zkClient);
 
-      // Overwrite with untrusted request
-      extraFileZkVersion =
-          getConfigZNodeVersion(
-              zkClient, configsetName, configsetSuffix, "test/upload/path/solrconfig.xml");
-      assertEquals(
-          0,
-          uploadSingleConfigSetFile(
-              configsetName,
-              configsetSuffix,
-              null,
-              "solr/configsets/upload/regular/solrconfig.xml",
-              "/test/upload/path/solrconfig.xml",
-              true,
-              false,
-              v2));
-      assertTrue(
-          "Expecting version bump",
-          extraFileZkVersion
-              < getConfigZNodeVersion(
-                  zkClient, configsetName, configsetSuffix, "test/upload/path/solrconfig.xml"));
-      assertConfigsetFiles(configsetName, configsetSuffix, zkClient);
-
-      // Make sure that cleanup flag does not result in configSet being trusted.
+      // Make sure that cleanup flag validation works correctly.
       ignoreException("ConfigSet uploads do not allow cleanup=true when filePath is used.");
       extraFileZkVersion =
           getConfigZNodeVersion(
@@ -974,20 +931,19 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
 
   public void testSingleFileNewConfig(boolean v2) throws Exception {
     String configsetName = "regular";
-    String configsetSuffixTrusted = "testSinglePathNewConfig-1-" + v2;
-    String configsetSuffixUntrusted = "testSinglePathNewConfig-2-" + v2;
+    String configsetSuffix = "testSinglePathNewConfig-" + v2;
     try (SolrZkClient zkClient =
         new SolrZkClient.Builder()
             .withUrl(cluster.getZkServer().getZkAddress())
             .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
             .withConnTimeOut(45000, TimeUnit.MILLISECONDS)
             .build()) {
-      // New file with trusted request
+      // Upload single file to create new configset
       assertEquals(
           0,
           uploadSingleConfigSetFile(
               configsetName,
-              configsetSuffixTrusted,
+              configsetSuffix,
               "solr",
               "solr/configsets/upload/regular/solrconfig.xml",
               "solrconfig.xml",
@@ -997,35 +953,10 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       assertEquals(
           "Expecting first version of new file",
           0,
-          getConfigZNodeVersion(zkClient, configsetName, configsetSuffixTrusted, "solrconfig.xml"));
+          getConfigZNodeVersion(zkClient, configsetName, configsetSuffix, "solrconfig.xml"));
       List<String> children =
           zkClient.getChildren(
-              String.format(Locale.ROOT, "/configs/%s%s", configsetName, configsetSuffixTrusted),
-              null);
-      assertEquals("The configSet should only have one file uploaded.", 1, children.size());
-      assertEquals("Incorrect file uploaded.", "solrconfig.xml", children.get(0));
-
-      // New file with trusted request
-      assertEquals(
-          0,
-          uploadSingleConfigSetFile(
-              configsetName,
-              configsetSuffixUntrusted,
-              null,
-              "solr/configsets/upload/regular/solrconfig.xml",
-              "solrconfig.xml",
-              false,
-              false,
-              v2));
-      assertEquals(
-          "Expecting first version of new file",
-          0,
-          getConfigZNodeVersion(
-              zkClient, configsetName, configsetSuffixUntrusted, "solrconfig.xml"));
-      children =
-          zkClient.getChildren(
-              String.format(Locale.ROOT, "/configs/%s%s", configsetName, configsetSuffixUntrusted),
-              null);
+              String.format(Locale.ROOT, "/configs/%s%s", configsetName, configsetSuffix), null);
       assertEquals("The configSet should only have one file uploaded.", 1, children.size());
       assertEquals("Incorrect file uploaded.", "solrconfig.xml", children.get(0));
     }
@@ -1044,7 +975,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
 
   @Test
   public void testUpload() throws Exception {
-    String suffix = "-untrusted";
+    String suffix = "-test";
     uploadConfigSetWithAssertions("regular", suffix, null);
     // try to create a collection with the uploaded configset
     createCollection("newcollection", "regular" + suffix, 1, 1, cluster.getSolrClient());
@@ -1055,37 +986,12 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     Assume.assumeNotNull((new ScriptEngineManager()).getEngineByExtension("js"));
     Assume.assumeNotNull((new ScriptEngineManager()).getEngineByName("JavaScript"));
 
-    // Authorization off
-    final String untrustedSuffix = "-untrusted";
-    uploadConfigSetWithAssertions("with-script-processor", untrustedSuffix, null);
-    // try to create a collection with the uploaded configset
-    ignoreException("uploaded without any authentication in place");
-    Throwable thrown =
-        expectThrows(
-            RemoteSolrException.class,
-            () -> {
-              createCollection(
-                  "newcollection2",
-                  "with-script-processor" + untrustedSuffix,
-                  1,
-                  1,
-                  cluster.getSolrClient());
-            });
-    unIgnoreException("uploaded without any authentication in place");
-
-    assertThat(thrown.getMessage(), containsString("Underlying core creation failed"));
-
-    // Authorization on
-    final String trustedSuffix = "-trusted";
-    uploadConfigSetWithAssertions("with-script-processor", trustedSuffix, "solr");
-    // try to create a collection with the uploaded configset
+    // Upload configset with script processor and create collection
+    final String suffix = "-test";
+    uploadConfigSetWithAssertions("with-script-processor", suffix, "solr");
     CollectionAdminResponse resp =
         createCollection(
-            "newcollection2",
-            "with-script-processor" + trustedSuffix,
-            1,
-            1,
-            cluster.getSolrClient());
+            "newcollection2", "with-script-processor" + suffix, 1, 1, cluster.getSolrClient());
     scriptRequest("newcollection2");
   }
 
@@ -1094,6 +1000,89 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     // Uploads a config set containing a script, a class file and jar file, will return 400 error
     long res = uploadConfigSet("forbidden", "suffix", "foo", true, false, true, false, true);
     assertEquals(400, res);
+  }
+
+  @Test
+  public void testGetFile() throws Exception {
+    String configSetName = "regular";
+    String configSetSuffix = "testGetFile";
+
+    // First upload a configset
+    uploadConfigSetWithAssertions(configSetName, configSetSuffix, null);
+
+    try (SolrZkClient zkClient =
+        new SolrZkClient.Builder()
+            .withUrl(cluster.getZkServer().getZkAddress())
+            .withTimeout(AbstractZkTestCase.TIMEOUT, TimeUnit.MILLISECONDS)
+            .withConnTimeOut(45000, TimeUnit.MILLISECONDS)
+            .build()) {
+
+      // Verify files exist in ZK
+      assertTrue(
+          zkClient.exists("/configs/" + configSetName + configSetSuffix + "/solrconfig.xml"));
+      assertTrue(
+          zkClient.exists("/configs/" + configSetName + configSetSuffix + "/managed-schema.xml"));
+
+      // Test getting a root-level file via V2 API
+      String baseUrl = cluster.getJettySolrRunners().get(0).getBaseURLV2().toString();
+      String getFileUrl =
+          baseUrl + "/configsets/" + configSetName + configSetSuffix + "/files/solrconfig.xml";
+
+      HttpClient httpClient = cluster.getJettySolrRunners().get(0).getSolrClient().getHttpClient();
+      ContentResponse response = httpClient.newRequest(getFileUrl).method(HttpMethod.GET).send();
+
+      byte[] responseBytes = response.getContent();
+      String content = new String(responseBytes, UTF_8);
+
+      assertNotNull(content);
+      assertTrue("Content should contain config XML", content.contains("<config"));
+
+      // Test getting a nested file
+      getFileUrl =
+          baseUrl + "/configsets/" + configSetName + configSetSuffix + "/files/managed-schema.xml";
+      response = httpClient.newRequest(getFileUrl).method(HttpMethod.GET).send();
+
+      responseBytes = response.getContent();
+      content = new String(responseBytes, UTF_8);
+
+      assertNotNull(content);
+      assertTrue("Content should contain schema XML", content.contains("schema"));
+
+      // Test binary file preservation by uploading a small binary file
+      byte[] binaryData =
+          new byte[] {
+            (byte) 0x89,
+            0x50,
+            0x4E,
+            0x47,
+            0x0D,
+            0x0A,
+            0x1A,
+            0x0A, // PNG signature
+            (byte) 0xFF,
+            (byte) 0xFE,
+            0x00,
+            0x01,
+            (byte) 0x80
+          };
+
+      // Upload binary file to ZK directly
+      zkClient.makePath(
+          "/configs/" + configSetName + configSetSuffix + "/test.bin",
+          binaryData,
+          CreateMode.PERSISTENT,
+          null);
+
+      // Retrieve it via API
+      getFileUrl = baseUrl + "/configsets/" + configSetName + configSetSuffix + "/files/test.bin";
+      response = httpClient.newRequest(getFileUrl).method(HttpMethod.GET).send();
+
+      byte[] retrievedBytes = response.getContent();
+
+      // Binary data should be preserved exactly
+      assertArrayEquals(
+          "Binary file should be preserved byte-for-byte", binaryData, retrievedBytes);
+    }
   }
 
   private static String getSecurityJson() {
@@ -1136,22 +1125,20 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     assertTrue(
         "solrconfig.xml file should have been uploaded",
         zkClient.exists("/configs/" + configSetName + suffix + "/solrconfig.xml"));
-    byte data[] = zkClient.getData("/configs/" + configSetName + suffix, null, null);
-    // assertEquals("{\"trusted\": false}", new String(data, StandardCharsets.UTF_8));
     assertArrayEquals(
         "solrconfig.xml file contents on zookeeper are not exactly same as that of the file uploaded in config",
         zkClient.getData("/configs/" + configSetName + suffix + "/solrconfig.xml", null, null),
         readFile("solr/configsets/upload/" + configSetName + "/solrconfig.xml"));
   }
 
-  private long uploadConfigSet(
+  private int uploadConfigSet(
       String configSetName, String suffix, String username, SolrZkClient zkClient, boolean v2)
-      throws IOException {
+      throws Exception {
     assertFalse(getConfigSetService().checkConfigExists(configSetName + suffix));
     return uploadConfigSet(configSetName, suffix, username, false, false, v2, false, false);
   }
 
-  private long uploadConfigSet(
+  private int uploadConfigSet(
       String configSetName,
       String suffix,
       String username,
@@ -1160,7 +1147,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       boolean v2,
       boolean forbiddenTypes,
       boolean forbiddenContent)
-      throws IOException {
+      throws Exception {
 
     Path zipFile;
     if (forbiddenTypes) {
@@ -1179,21 +1166,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     return uploadGivenConfigSet(zipFile, configSetName, suffix, username, overwrite, cleanup, v2);
   }
 
-  private long uploadBadConfigSet(String configSetName, String suffix, String username, boolean v2)
-      throws IOException {
-
-    // Read single file from sample configs. This should fail the unzipping
-    return uploadGivenConfigSet(
-        SolrTestCaseJ4.getFile("solr/configsets/upload/regular/solrconfig.xml"),
-        configSetName,
-        suffix,
-        username,
-        true /* overwrite */,
-        true /* cleanup */,
-        v2);
-  }
-
-  private long uploadGivenConfigSet(
+  private int uploadGivenConfigSet(
       Path file,
       String configSetName,
       String suffix,
@@ -1201,28 +1174,23 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       boolean overwrite,
       boolean cleanup,
       boolean v2)
-      throws IOException {
+      throws Exception {
 
     if (v2) {
-      // TODO: switch to using V2Request
+      // Use generated v2 SolrJ client (ConfigsetsApi)
+      try (InputStream fileBytes = new FileInputStream(file.toFile())) {
+        // Create and execute the upload request using generated client
+        final var uploadRequest =
+            new ConfigsetsApi.UploadConfigSet(configSetName + suffix, fileBytes);
+        uploadRequest.setOverwrite(overwrite);
+        uploadRequest.setCleanup(cleanup);
 
-      final ByteBuffer fileBytes = TestSolrConfigHandler.getFileContent(file.toString(), false);
-      final String uriEnding =
-          "/configsets/"
-              + configSetName
-              + suffix
-              + (!overwrite ? "?overwrite=false" : "")
-              + (cleanup ? "?cleanup=true" : "");
-      final boolean usePut = true;
-      Map<?, ?> map =
-          postDataAndGetResponse(
-              cluster.getSolrClient(),
-              cluster.getJettySolrRunners().get(0).getBaseURLV2().toString() + uriEnding,
-              fileBytes,
-              username,
-              usePut);
-      assertNotNull(map);
-      return (Long) getObjectByPath(map, Arrays.asList("responseHeader", "status"));
+        final var response = uploadRequest.process(cluster.getSolrClient());
+        return response.responseHeader.status;
+      } catch (RemoteSolrException e) {
+        // Convert exception to status code for consistent error handling with v1
+        return e.code();
+      }
     } // else "not" a V2 request...
 
     try {
@@ -1241,7 +1209,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     }
   }
 
-  private long uploadSingleConfigSetFile(
+  private int uploadSingleConfigSetFile(
       String configSetName,
       String suffix,
       String username,
@@ -1250,53 +1218,56 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       boolean overwrite,
       boolean cleanup,
       boolean v2)
-      throws IOException {
+      throws Exception {
     // Read single file from sample configs
     final Path file = SolrTestCaseJ4.getFile(localFilePath);
 
     if (v2) {
-      // TODO: switch to use V2Request
+      // Use generated v2 SolrJ client (ConfigsetsApi)
+      try {
+        final ByteBuffer sampleConfigFileBuffer =
+            TestSolrConfigHandler.getFileContent(file.toString(), false);
 
-      final ByteBuffer sampleConfigFile =
-          TestSolrConfigHandler.getFileContent(file.toString(), false);
-      if (uploadPath != null && !uploadPath.startsWith("/")) {
-        uploadPath = "/" + uploadPath;
+        // Convert ByteBuffer to InputStream for the generated client
+        final InputStream sampleConfigFile =
+            new ByteArrayInputStream(
+                sampleConfigFileBuffer.array(),
+                sampleConfigFileBuffer.arrayOffset(),
+                sampleConfigFileBuffer.limit());
+
+        if (uploadPath.startsWith("/")) {
+          uploadPath = uploadPath.substring(1);
+        }
+
+        // Create and execute the upload request using generated client
+        final var uploadRequest =
+            new ConfigsetsApi.UploadConfigSetFile(
+                configSetName + suffix, uploadPath, sampleConfigFile);
+
+        final var response = uploadRequest.process(cluster.getSolrClient());
+        return response.responseHeader.status;
+      } catch (RemoteSolrException e) {
+        // Convert exception to status code for consistent error handling with v1
+        return e.code();
       }
-      final String uriEnding =
-          "/configsets/"
-              + configSetName
-              + suffix
-              + uploadPath
-              + (!overwrite ? "?overwrite=false" : "")
-              + (cleanup ? "?cleanup=true" : "");
-      final boolean usePut = true;
+    } else { // else "not" a V2 request...
 
-      Map<?, ?> map =
-          postDataAndGetResponse(
-              cluster.getSolrClient(),
-              cluster.getJettySolrRunners().get(0).getBaseURLV2().toString() + uriEnding,
-              sampleConfigFile,
-              username,
-              usePut);
-      assertNotNull(map);
-      return (long) getObjectByPath(map, Arrays.asList("responseHeader", "status"));
-    } // else "not" a V2 request...
-
-    try {
-      return (new Upload())
-          .setConfigSetName(configSetName + suffix)
-          .setFilePath(uploadPath)
-          // NOTE: server doesn't actually care, and test plumbing doesn't tell us
-          .setUploadFile(file, "application/octet-stream")
-          .setOverwrite(overwrite ? true : null) // expect server default to be 'false'
-          .setCleanup(cleanup ? true : null) // expect server default to be 'false'
-          .setBasicAuthCredentials(username, username) // for our MockAuthenticationPlugin
-          .process(cluster.getSolrClient())
-          .getStatus();
-    } catch (SolrServerException e1) {
-      throw new AssertionError("Server error uploading file to configset: " + e1, e1);
-    } catch (SolrException e2) {
-      return e2.code();
+      try {
+        return (new Upload())
+            .setConfigSetName(configSetName + suffix)
+            .setFilePath(uploadPath)
+            // NOTE: server doesn't actually care, and test plumbing doesn't tell us
+            .setUploadFile(file, "application/octet-stream")
+            .setOverwrite(overwrite ? true : null) // expect server default to be 'false'
+            .setCleanup(cleanup ? true : null) // expect server default to be 'false'
+            .setBasicAuthCredentials(username, username) // for our MockAuthenticationPlugin
+            .process(cluster.getSolrClient())
+            .getStatus();
+      } catch (SolrServerException e1) {
+        throw new AssertionError("Server error uploading file to configset: " + e1, e1);
+      } catch (SolrException e2) {
+        return e2.code();
+      }
     }
   }
 
@@ -1386,7 +1357,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     try (ZipOutputStream zout = new ZipOutputStream(out)) {
       if (Files.isRegularFile(fileOrDirectory)) {
         // Create entries with given file, one for each forbidden endding
-        for (String fileType : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+        for (String fileType : ConfigSetService.DEFAULT_FORBIDDEN_FILE_TYPES) {
           zout.putNextEntry(new ZipEntry("test." + fileType));
 
           try (InputStream in = Files.newInputStream(fileOrDirectory)) {
@@ -1479,59 +1450,47 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
     return res;
   }
 
+  /** for Javabin request, JSON response */
   public static Map<?, ?> postDataAndGetResponse(
-      CloudSolrClient cloudClient, String uri, ByteBuffer bytarr, String username, boolean usePut)
-      throws IOException {
-    HttpEntityEnclosingRequestBase httpRequest = null;
-    HttpEntity entity;
-    String response = null;
-    Map<?, ?> m = null;
-
-    try {
-      if (usePut) {
-        httpRequest = new HttpPut(uri);
-      } else {
-        httpRequest = new HttpPost(uri);
-      }
-
-      if (username != null) {
-        httpRequest.addHeader(new BasicHeader("user", username));
-      }
-
-      httpRequest.setHeader("Content-Type", "application/octet-stream");
-      httpRequest.setEntity(
-          new ByteArrayEntity(bytarr.array(), bytarr.arrayOffset(), bytarr.limit()));
-      log.info("Uploading configset with user {}", username);
-      entity =
-          ((CloudLegacySolrClient) cloudClient).getHttpClient().execute(httpRequest).getEntity();
-      try {
-        response = EntityUtils.toString(entity, UTF_8);
-        m = (Map<?, ?>) Utils.fromJSONString(response);
-      } catch (JSONParser.ParseException e) {
-        System.err.println("err response: " + response);
-        throw new AssertionError(e);
-      }
-    } finally {
-      httpRequest.releaseConnection();
-    }
-    return m;
+      JettySolrRunner jetty, String uri, ByteBuffer javabinBody, String username, boolean usePut)
+      throws Exception {
+    return postDataAndGetResponse(
+        jetty, uri, "application/octet-stream", javabinBody, username, usePut);
   }
 
-  private static Object getObjectByPath(Map<?, ?> root, List<String> hierarchy) {
-    Map<?, ?> obj = root;
-    for (int i = 0; i < hierarchy.size(); i++) {
-      String s = hierarchy.get(i);
-      if (i < hierarchy.size() - 1) {
-        if (!(obj.get(s) instanceof Map)) return null;
-        obj = (Map<?, ?>) obj.get(s);
-        if (obj == null) return null;
-      } else {
-        Object val = obj.get(s);
-        return val;
-      }
+  /** for {@code contentType} request, JSON response */
+  public static Map<?, ?> postDataAndGetResponse(
+      JettySolrRunner jetty,
+      String uri, // possibly relative to jetty URI
+      String contentType,
+      ByteBuffer payload,
+      String username,
+      boolean usePut)
+      throws Exception {
+    if (!uri.contains("://")) {
+      uri = jetty.getBaseUrl() + uri;
     }
+    HttpClient httpClient = jetty.getSolrClient().getHttpClient();
+    ContentResponse rsp =
+        httpClient
+            .newRequest(uri)
+            .method(usePut ? HttpMethod.PUT : HttpMethod.POST)
+            .headers(h -> h.add("user", username))
+            .body(new ByteBufferRequestContent(contentType, payload))
+            .send();
+    String response = rsp.getContentAsString();
+    try {
+      return (Map<?, ?>) Utils.fromJSONString(response);
+    } catch (JSONParser.ParseException e) {
+      System.err.println("err response: " + response);
+      throw new AssertionError(e);
+    }
+  }
 
-    return false;
+  private static int getStatusCode(Map<?, ?> rsp) {
+    assertNotNull("no response", rsp);
+    Object sObj = Utils.getObjectByPath(rsp, false, List.of("responseHeader", "status"));
+    return ((Number) sObj).intValue();
   }
 
   private byte[] readFile(String fname) throws IOException {
@@ -1652,12 +1611,12 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
    * the real directory which matches what {@link ZkController} finds and uses to bootstrap ZK in
    * cloud based tests.
    *
-   * <p>This assumes the {@link SolrDispatchFilter#SOLR_CONFIGSET_DEFAULT_CONFDIR_ATTRIBUTE} system
-   * property has not been externally set in the environment where this test is being run -- which
-   * should <b>never</b> be the case, since it would prevent the test-framework from using {@link
+   * <p>This assumes the {@link ConfigSetService#SOLR_CONFIGSET_DEFAULT_CONFDIR} system property has
+   * not been externally set in the environment where this test is being run -- which should
+   * <b>never</b> be the case, since it would prevent the test-framework from using {@link
    * ExternalPaths#DEFAULT_CONFIGSET}
    *
-   * @see SolrDispatchFilter#SOLR_CONFIGSET_DEFAULT_CONFDIR_ATTRIBUTE
+   * @see ConfigSetService#SOLR_CONFIGSET_DEFAULT_CONFDIR
    * @see #beforeSolrTestCase
    * @see ConfigSetService#getDefaultConfigDirPath
    */
@@ -1728,7 +1687,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
 
         @Override
         public Map<String, String> getPromptHeaders() {
-          return Collections.emptyMap();
+          return Map.of();
         }
       };
     }
@@ -1738,8 +1697,8 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
         HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
         throws Exception {
       if (request.getHeader("user") != null) {
-        final Principal p = new BasicUserPrincipal("solr");
-        filterChain.doFilter(wrap(request, p, "solr"), response);
+        var principal = new SimplePrincipal("solr");
+        filterChain.doFilter(wrap(request, principal, "solr"), response);
         return true;
       }
       return super.doAuthenticate(request, response, filterChain);
